<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ForgotPasswordActivity"
    android:background="@color/bgForgot">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:text="@string/need_forgot"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorBlack"
        android:id="@+id/textHelp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_edit_text2"
        android:layout_below="@+id/textHelp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center|center_horizontal"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:id="@+id/editTextNumberForgot"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/background_button2"
        android:layout_below="@+id/editTextNumberForgot"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/send"
        android:textColor="@color/colorWhite"
        android:id="@+id/btnSendForgot"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_above="@+id/btnRegister"
        android:layout_marginBottom="10dp"
        android:text="@string/have_account"
        android:textSize="15sp"
        android:id="@+id/textRegister"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:id="@+id/btnRegister"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_button2"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_in"/>

</RelativeLayout>