<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WashFoldActivity"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBarWashFold"
        android:background="@drawable/tool_bar_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:id="@+id/washFoldBack"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:text="@string/wash_fold"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:layout_below="@+id/toolBarWashFold"
        android:id="@+id/scrollViewWashFold"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            android:id="@+id/linearLayoutWashFold">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:text="@string/men"
                android:background="@drawable/background_text_view"
                android:textSize="16sp"
                android:layout_margin="1dp"
                android:gravity="center_horizontal"
                android:id="@+id/textMen"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:text="@string/women"
                android:layout_margin="1dp"
                android:id="@+id/textWomen"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:gravity="center_horizontal"
                android:text="@string/bedding"
                android:layout_margin="1dp"
                android:id="@+id/textBedding"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:gravity="center_horizontal"
                android:layout_margin="1dp"
                android:id="@+id/textHousehold"
                android:text="@string/household"/>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_below="@+id/scrollViewWashFold"
        android:layout_marginTop="10dp"
        android:id="@+id/viewScrollView"/>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewScrollView"
        android:layout_above="@+id/linearLayoutBedding"
        android:id="@+id/viewPagerWashFold">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black_button"
        android:orientation="horizontal"
        android:id="@+id/linearLayoutBedding">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:text="@string/your_basket"
                android:id="@+id/textBasket"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textBasket"
                android:layout_alignStart="@+id/textBasket"
                android:textColor="@color/colorWhite"
                android:text="@string/items"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/done"
                android:textSize="15sp"
                android:id="@+id/textDoneBasket"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>